# SocraticMath

./: .gitignore  README.md
code/: .gitignore  README.md  pyproject.toml
code/outputs/: analysis_summary.json  divergence_directed_pedagogical.csv  divergence_directed_symmetric.csv  divergence_directed_types_pedagogical.csv  divergence_directed_types_symmetric.csv  divergence_pedagogical.csv  divergence_symmetric.csv  divergence_types_pedagogical.csv  divergence_types_symmetric.csv  problem_type_analysis_summary.json  problem_type_distribution.csv  significance_one_vs_rest.csv  significance_summary.json  similarity_pedagogical.csv  similarity_symmetric.csv  similarity_types_pedagogical.csv  similarity_types_symmetric.csv  transition_pedagogical_algebra.csv  transition_pedagogical_counting_and_probability.csv  transition_pedagogical_geometry.csv  transition_pedagogical_intermediate_algebra.csv  transition_pedagogical_number_theory.csv  transition_pedagogical_prealgebra.csv  transition_pedagogical_precalculus.csv  transition_symmetric_algebra.csv  transition_symmetric_counting_and_probability.csv  transition_symmetric_geometry.csv  transition_symmetric_intermediate_algebra.csv  transition_symmetric_number_theory.csv  transition_symmetric_prealgebra.csv  transition_symmetric_precalculus.csv  transition_types_pedagogical_AC.csv  transition_types_pedagogical_CH.csv  transition_types_pedagogical_ET.csv  transition_types_pedagogical_FN.csv  transition_types_pedagogical_FP.csv  transition_types_pedagogical_IM.csv  transition_types_pedagogical_IN.csv  (+11 more)
(+8148 files in other folders)
