[project]
name = "socratic-hints"
version = "0.1.0"
description = "Bayesian analysis of Socratic mathematics hint-type transitions across domains."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.scripts]
socratic-hints = "socratic_hints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/socratic_hints"]
